--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8"/>
         <meta view="viewport" content="width=device-width, initial-scale=1" />
         <title>CSS Project</title>
-        <link rel="stylesheet" type="text/css" href="cssstyle.css">
+        <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     </head>
     <body>
          <div id="container">
